# lighter

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .safety-policy.yml  404.html  ADAPTERS_NEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  gen_ref_pages.py  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  iSSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  question.md
.github/workflows/: auto-publish.yml  build.yml  check_pull_request_title.yml  ci.yaml  ci.yml  code_quality.yml  diagram.yml  docs-publish.yml  greetings.yml  publish.yml  tests.yml
advanced/callbacks/: index.html
advanced/inferer/: index.html
advanced/postprocessing/: index.html
assets/: extra.css
basics/config/: index.html
basics/projects/: index.html
basics/quickstart/: index.html
basics/workflows/: index.html
components/: feature-card4.css
design/adapters/: index.html
design/overview/: index.html
design/philosophy/: index.html
design/system/: index.html
docker/: README.md
docs/: api.md  faq.md  gen_ref_pages.py  index.md  installation.md
docs/advanced/: callbacks.md  inferer.md  postprocessing.md
docs/assets/: extra.css
docs/basics/: 5-minute-example.md  config.md  projects.md  quickstart.md  system.md  workflows.md
docs/design/: 01_overview.md  02_configuration_system.md  03_adapter_system.md  04_dynamic_module_loading.md  adapters.md  flows.md  overview.md  philosophy.md  system.md
docs/explanation/: 01_overview.md  02_configuration_system.md  03_adapter_system.md  adapter_system.md  configuration_system.md  dynamic_module_loading.md  overview.md
docs/getting-started/: first-steps.md  quick-start.md
docs/how-to/: 01_custom_project_modules.md  02_debugging_config_errors.md  03_creating_a_custom_metric.md  04_using_adapters.md  05_using_and_extending_writers.md  06_using_freezer.md  07_implementing_a_custom_inferer.md  adapters.md  configuration.md  configure.md  creating_a_custom_metric.md  custom_project_modules.md  debugging_config_errors.md  experiment_tracking.md  flows.md  freezers.md  implementing_a_custom_inferer.md  inferers.md  metrics.md  project_module.md  recipes.md  run.md  troubleshooting.md  using_adapters.md  using_and_extending_writer.md  using_freezer.md  writers.md
docs/migration/: from-pytorch-lightning.md
docs/overrides/: 404.css  index.css  package.json
docs/tutorials/: 01_configuration_basics.md  02_image_classification.md  03_semantic_segmentation.md  04_transfer_learning.md  05_multi_task_learning.md  configuration_basics.md  get-started.md  image_classification.md  zero_to_hero.md
faq/: index.html
how-to/adapters/: index.html
how-to/configuration/: index.html
how-to/configure/: index.html
how-to/experiment_tracking/: index.html
how-to/freezers/: index.html
how-to/inferers/: index.html
how-to/metrics/: index.html
how-to/project_module/: index.html
how-to/recipes/: index.html
how-to/run/: index.html
how-to/troubleshooting/: index.html
how-to/writers/: index.html
lighter/: __init__.py  adapters.py  cli.py  config.py  defs.py  engine.py  logger.py  logging.py  runner.py  system.py  transforms.py  typing.py  utils.py  version.py  viewer.py
lighter/callbacks/: __init__.py  freezer.py  logger.py  utils.py  writer.py
lighter/engine/: config.py  resolver.py  runner.py  schema.py
lighter/metrics/: integration.py  metrics.py
lighter/postprocessing/: pipeline.py
lighter/utils/: __init__.py  cli.py  collate.py  color.py  data.py  dynamic_imports.py  enums.py  freezer.py  importing.py  json.py  logging.py  misc.py  model.py  patches.py  runner.py  schema.py  types.py
lightningbringer/: __init__.py  cli.py  config.py  logger.py  runner.py  system.py  transforms.py  utils.py
lightningbringer/configs/: __init__.py  config.py  utils.py
lightningbringer/ssl/: losses.py  utils.py
migration/from-pytorch-lightning/: index.html
overrides/: 404.html  index.html  style.css
overrides/components/: component.css  component.html  component1.html  feature-card2.html  feature-card3.html  feature-card4.html  gallery-card3.css  navigation-links.html  navigation-links1.html  navigation-links3.css  navigation-links3.html
paper/: lighter_diagrams.pptx  paper.bib  paper.md
projects/: README.md
projects/cancer-imaging-ssl/: requirements.txt
pytorchito/: __init__.py  runner.py  system.py
pytorchito/configs/: __init__.py  config.py  utils.py
pytorchito/engines/: __init__.py  base.py  inferer.py  trainer.py  utils.py  validator_tester.py
pytorchito/utils/: communication.py  importing.py  io.py
reference/: index.html
reference/SUMMARY/: index.html
reference/adapters/: index.html
reference/callbacks/: index.html
reference/engine/: index.html
reference/system/: index.html
reference/utils/: index.html
scripts/: generate_api_reference_pages.py
search/: search_index.json
src/lighter/: __init__.py  adapters.py  flow.py  system.py
tests/: test_transforms.py  test_viewer.py
tests/configs/: test1.yaml
tests/integration/: test_cifar.py  test_config_validation.py  test_overrides.yaml
tests/unit/: test_adapters.py  test_callbacks_freezer.py  test_callbacks_utils.py  test_callbacks_writer_base.py  test_callbacks_writer_file.py  test_callbacks_writer_table.py  test_collate.py  test_dummy.py  test_dynamic_imports.py  test_engine_cli.py  test_engine_config.py  test_engine_resolver.py  test_engine_runner.py  test_engine_runner_errors.py  test_engine_schema.py  test_flow.py  test_freezer.py  test_logging.py  test_misc.py  test_model.py  test_patches.py  test_runner.py  test_schema.py  test_system.py  test_utils.py  test_utils_collate.py  test_utils_data.py  test_utils_dynamic_imports.py  test_utils_logging.py  test_utils_misc.py  test_utils_model.py  test_utils_patches.py  test_utils_runner.py  test_utils_types_containers.py  test_writer_base.py  test_writer_file.py  test_writer_table.py
tutorials/get-started/: index.html
(+102 files in other folders)
