# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lighter = "lighter.utils.cli:interface"

[tool.poetry]
name = "project-lighter"
version = "0.0.2a6"
description = "YAML-based automated rapid prototyping framework for deep learning experiments"
readme = "README.md"
authors = ["Ibrahim Hadzic <ibrahimhadzic45@gmail.com>" ,
            "Suraj Pai <b.pai@maastrichtuniversity.nl>", 
            "Keno Bressem <kbressem@bwh.harvard.edu>"]
license = "MIT"
repository = "https://github.com/lighter/lighter"
homepage = "https://github.com/lighter/lighter"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me
packages = [
    { include = "lighter" },
]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]



[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0"
pandas = "^1.5.3"
torchvision = "^0.15"
pytorch-lightning = "^2.0.0"
fire = "^0.5.0"
loguru = "^0.6.0"
lightly = "^1.2.43"
torchmetrics = "^0.11.0"
py = "^1.11.0"
tensorboard = "^2.11.2"
monai-weekly = "^1.2.dev2305"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = {version = "^23.1a1", allow-prereleases = true}
isort = {extras = ["colors"], version = "^5.11.4"}
mypy = "^0.991"
mypy-extensions = "^0.4.3"
pre-commit = "^2.21.0"
pydocstyle = "^6.3.0"
pylint = "^2.15.10"
pytest = "^7.2.1"
pyupgrade = "^3.3.1"
safety = "^2.3.5"
coverage = "^7.0.5"
coverage-badge = "^1.1.0"
pytest-html = "^3.2.0"
pytest-cov = "^4.0.0"
aiohttp = "^3.8.3"
py = "^1.11.0"
poetry-bumpversion = "^0.3.0"
typing-extensions = "^4.4.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 127
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 38
line_length = 127

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.8
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
# Markers to categorize tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]


[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "lighter"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 127
disable = """
    too-many-arguments,
    no-else-return,
"""
generated-members = "torch.*"

[tool.pylint.master]
fail-under=8

[tool.poetry_bumpversion.file."lighter/version.py"]
