[metadata]
name = lighter
version = 0.0.1
author = "ibro45"
# author-email = 
url = https://github.com/ibro45/lighter
description = lighter description
long_description = file: README.md
long_description_content_type = text/markdown
license = mit
platforms = any
keywords = PyTorch, PyTorch lighting, MONAI
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research
project_urls =
    Documentation = https://lighter.readthedocs.io/en/latest/

[options]
zip_safe = False
packages = find: 
include_package_data = True
#setup_requires = 
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =  
    torch
    torchvision
    pytorch-lightning
    hydra-core
    omegaconf
    wandb
    loguru
    mkdocs

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
exclude =
    docs
    docker
    tests
    projects


[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install clinical-evaluation[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    lighter = lighter.cli:interface

[yapf]
based_on_style = google
column_limit = 100

[pylint]
fail-under = 8

[pylint.typecheck]
generated-members=torch.*, cv2.*
good-names=x, y, z, i

[flake8]
select = B,C,E,F,N,P,T4,W,B9
max_line_length = 120
ignore =
    E203
    E501
    E741
    W503
    W504
    C408
    N812
    B023
    B905
per_file_ignores = __init__.py: F401, __main__.py: F401
exclude = 
	.git,
	.eggs/,
	__pycache__,
	.ipynb_checkpoints,
	*/tmp_*,
	*/temp_*,
	build/,
	dist/,
	data/,
	logs/,
	notebooks/,
	wandb,
	.venv

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
strict_equality = True
show_column_numbers = True
show_error_codes = True
pretty = False
warn_unused_configs = True
strict_concatenate = True


[isort]
known_first_party = monai
profile = black
line_length = 120
skip = .git, .eggs, venv, .venv, versioneer.py, _version.py, conf.py, monai/__init__.py
skip_glob = *.pyi
add_imports = from __future__ import annotations
append_only = true